# template

./: .gitignore  README.md  cookiecutter.json  pixi.toml  spec.yaml
.github/workflows/: ci.yml
dev/: pytest.sh  recompile.sh
ecoscope-workflows-events-workflow/: .dockerignore  Dockerfile  README.md  pixi.toml  pyproject.toml
ecoscope-workflows-events-workflow/ecoscope_workflows_events_workflow/: app.py  cli.py  dispatch.py  formdata.py  params.py
ecoscope-workflows-events-workflow/ecoscope_workflows_events_workflow/dags/: __init__.py  jupytext.py  run_async.py  run_async_mock_io.py  run_sequential.py  run_sequential_mock_io.py
ecoscope-workflows-events-workflow/tests/: conftest.py  test_app.py  test_cli.py
ecoscope-workflows-patrol-events-workflow/: .dockerignore  Dockerfile  README.md  pixi.toml  pyproject.toml
ecoscope-workflows-patrol-events-workflow/ecoscope_workflows_patrol_events_workflow/: app.py  cli.py  dispatch.py  params.py
ecoscope-workflows-patrol-events-workflow/ecoscope_workflows_patrol_events_workflow/dags/: __init__.py  jupytext.py  run_async.py  run_async_mock_io.py  run_sequential.py  run_sequential_mock_io.py
ecoscope-workflows-patrol-events-workflow/tests/: conftest.py  test_app.py  test_cli.py
publish/: build.sh  push.sh
publish/recipes/release/: ecoscope-workflows-ext-template.yaml  ecoscope-workflows-ext-{{cookiecutter.project_name}}.yaml
src/ecoscope-workflows-ext-template/: README.md  pyproject.toml
src/ecoscope-workflows-ext-{{cookiecutter.project_name}}/: README.md  pyproject.toml
terraform/environments/: terragrunt.hcl
terraform/environments/dev/: terragrunt.hcl
terraform/environments/prod/: terragrunt.hcl
terraform/modules/: cloud-run.tf  iam.tf  provider.tf  variables.tf
workflows/template/: spec.yaml
workflows/template/ecoscope-workflows-template-workflow/: Dockerfile  README.md  pixi.toml
workflows/{{cookiecutter.workflow_name}}/: spec.yaml
{{cookiecutter.project_name}}/: README.md  pixi.toml
{{cookiecutter.project_name}}/dev/: pytest-task.sh
{{cookiecutter.project_name}}/workflows/{{cookiecutter.workflow_name}}/: spec.yaml
{{cookiecutter.repo_name}}/: README.md  pixi.toml
{{cookiecutter.repo_name}}/.github/workflows/: link_issue.yml  test.yml
{{cookiecutter.repo_name}}/dev/: pytest-task.sh
{{cookiecutter.repo_name}}/publish/: build.sh
(+14 files in other folders)
