# [generated]
# by = { compiler = "ecoscope-workflows-core", version = "9999" }
# from-spec-sha256 = "602895479ce13588b865dd77be4b0686de430ab27a5da4670758dc477a46de03"

[project]
name = "ecoscope-workflows-events-workflow"
version = "0.0.0"  # todo: versioning
requires-python = ">=3.10"  # TODO: sync with ecoscope-workflows-core
description = ""  # TODO: description from spec
license = { text = "BSD-3-Clause" }
scripts = { ecoscope-workflows-events-workflow = "ecoscope_workflows_events_workflow.cli:main" }
