# [generated]
# by = { compiler = "ecoscope-workflows-core", version = "9999" }
# from-spec-sha256 = "141253e7bb82a527f179d950a74f497f6db572dd16d83d7da05e43437d877932"

[project]
name = "ecoscope-workflows-events-workflow"
version = "0.0.0"  # todo: versioning
requires-python = ">=3.10"  # TODO: sync with ecoscope-workflows-core
description = ""  # TODO: description from spec
license = { text = "BSD-3-Clause" }
scripts = { ecoscope-workflows-events-workflow = "ecoscope_workflows_events_workflow.cli:main" }
