# [generated]
# by = { compiler = "ecoscope-workflows-core", version = "9999" }
# from-spec-sha256 = "643d239161219e7c904abd28bd05cad82077f35ecd9be771115b88e0730aa8cc"

[project]
name = "ecoscope-workflows-events-workflow"
version = "0.0.0"  # todo: versioning
requires-python = ">=3.10"  # TODO: sync with ecoscope-workflows-core
description = ""  # TODO: description from spec
license = { text = "BSD-3-Clause" }
scripts = { ecoscope-workflows-events-workflow = "ecoscope_workflows_events_workflow.cli:main" }
