# [generated]
# by = { compiler = "ecoscope-workflows-core", version = "9999" }
# from-spec-sha256 = "bf7b6de51904baf56f10905682ceac7066af1815d8fc4d11a4bb289bc3847f17"

[project]
name = "ecoscope-workflows-patrol-events-workflow"
version = "0.0.0"  # todo: versioning
requires-python = ">=3.10"  # TODO: sync with ecoscope-workflows-core
description = ""  # TODO: description from spec
license = { text = "BSD-3-Clause" }
scripts = { ecoscope-workflows-patrol-events-workflow = "ecoscope_workflows_patrol_events_workflow.cli:main" }
